--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,17 @@
     box-sizing: border-box;
 }
 
-body, p {
+
+body,
+p {
     font-size: 1.1em;
     color: #868e96;
 }
 
 
-h1,h2,h3 {
+h1,
+h2,
+h3 {
     font-family: 'Saira Extra Condensed', sans-serif;
     color: #495057;
     font-weight: 800;
@@ -26,9 +30,79 @@ p {
     font-family: 'Montserrat', sans-serif;
 }
 
-hr {
-    color: #868e96;
+/* Main Content */
+
+.mainContent {
+    width: 83.34%;
+    position: relative;
+    left: 16.66%;
+}
+
+.container {
+    display: flex;
+}
+
+/* General section styles */
+
+.highlight {
+    font-weight: bold;
+    color: #bb7171;
+}
+
+.section {
+    width: 95%;
     margin: 30px 30px;
+    padding: 20px 0;
+    border-bottom: 1px solid #ffccff;
+}
+
+.section h2 {
+    margin-bottom: 100px;
+    margin-top: 0px;
+}
+
+.section h3 {
+    margin-bottom: 60px;
+    font-size: 1.5rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    color: #bb7171;
+}
+
+.section p {
+    font-size: 1.15rem;
+    text-align: justify;
+}
+
+
+/* About Section */
+
+#about {
+    margin-top: 280px;
+}
+
+#about span {
+    color: #bb7171;
+}
+
+#about h1 {
+    font-size: 5.6rem;
+    line-height: 5.5rem;
+}
+
+.social-icon {
+    font-size: 3.5rem;
+    margin-top: 100px;
+    margin-bottom: 190px;
+    color: #495057;
+}
+
+.social-icon:hover {
+    color: #bb7171;
+}
+
+.fa-github-square {
+    margin-left: 5px;
 }
 
 /* Side Nav */
@@ -65,64 +139,10 @@ hr {
     text-decoration: none;
 }
 
-/* Main Content */
-
-.mainContent {
-    width: 83.34%;  
-    position: relative;
-    left: 16.66%;
+.myLinks .active {
+    color: #ffffff;
 }
 
-.container {
-    display: flex; 
-}
-
-/* General section styles */
-.highlight {
-    font-weight: bold;
-    color: #bb7171;
-
-}
-
-.section {
-    width: 95%;
-    margin: 30px 30px;
-    padding: 20px 0;
-    border-bottom: 1px solid #ffccff;
-}
-
-.section h2 {
-    margin-bottom: 100px;
-    margin-top:0px;
-}
-
-.section h3 {
-    margin-bottom: 60px;
-    font-size: 1.5rem;
-    font-weight: 300;
-    text-transform: uppercase;
-    color: #bb7171;
-}
-
-.section p {
-    font-size: 1.15rem;
-    text-align: justify;
-}
-
-
-/* About Section */
-#about {
-    margin-top: 280px;
-}
-
-#about span {
-    color: #bb7171;
-}
-
-#about h1 {
-    font-size: 5.6rem;
-    line-height: 5.5rem;
-}
 
 
 /* Skills section */
@@ -145,34 +165,45 @@ hr {
 
 /* Projects Section */
 
+
+
 /* Contact Section */
 
-#contact input, #contact textarea, #contact button {
+#contact {
+    border: none;
+}
+
+#contact input,
+#contact textarea,
+#contact button {
     width: 70%;
-    height: 2rem;
-    line-height: 2rem;
+    height: 3rem;
+    line-height: 3rem;
     font-size: 1.15rem;
     margin-bottom: 30px;
     border: 0;
-    border-bottom: 1px solid #868e96;
+    border-bottom: 1px solid #dadcdd;
 }
 
 #contact label {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
+    color: #5b6167;
+    font-family: 'Montserrat', sans-serif;
 
 }
 
-#contact input+label, #contact textarea+label {
+#contact input+label,
+#contact textarea+label {
     position: absolute;
     left: 20px;
     transition: transform 200ms ease;
-  
-    /* You have to use this to make it clickable through*/
     pointer-events: none;
 }
 
-#contact input:focus+label, #contact textarea:focus+label, 
-#contact input+label.freeze, #contact textarea+label.freeze {
+#contact input:focus+label,
+#contact textarea:focus+label,
+#contact input+label.freeze,
+#contact textarea+label.freeze {
     transform: translateY(-1.2rem);
     color: #bb7171;
     font-size: 1rem;
@@ -189,13 +220,14 @@ hr {
 
 #contact button {
     width: 100px;
-    height: 60px;;
+    height: 60px;
     border-radius: 39px;
     color: #ffffff;
     background-color: #d6a9a9;
     font-size: 1.5rem;
     font-family: 'Montserrat', sans-serif;
-    
+    margin-bottom: 150px;
+
 }
 
 #contact button:hover {
@@ -203,27 +235,10 @@ hr {
     text-decoration: none;
 }
 
-#contact input:focus, #contact textarea:focus{
+#contact input:focus,
+#contact textarea:focus {
     outline: none;
-  }
-
-
-.social-icon {
-    font-size: 3.5rem;
-    margin-top: 100px;
-    margin-bottom: 190px;
-    color: #495057;
 }
-
-.social-icon:hover {
-    color: #bb7171;
-}
-
-.fa-github-square {
-    margin-left: 5px;
-}
-
-
 
 /* Footer */
 
@@ -234,6 +249,6 @@ footer {
 }
 
 .footerSpan {
-    color: red; 
+    color: red;
     font-size: 1.2rem;
 }
