--- a/styles.css
+++ b/styles.css
@@ -180,9 +180,54 @@ p {
    margin-right: 60px;
 }
 
-#containerProjects a:last-child {
+.modal {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
+    opacity: 0;
     visibility: hidden;
+    transform: scale(1.1);
+    transition: visibility 0s linar 0.25s, opacity 0.25s 0s, transform 0.25s;
 }
+
+.modalContent {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #ffffff;
+    padding: 1rem 1.5rem;
+    width: 24rem;
+    border-radius: 0.5rem;
+}
+
+.closeButton {
+    float: right;
+    width: 1.5rem;
+    line-height: 1.5rem;
+    text-align: 1.5rem;
+    cursor: pointer;
+    border-radius: 0.25rem;
+    background-color: #868e96; 
+
+}
+
+.closeButton:hover {
+    background-color: #5b6167;
+}
+
+.showModal {
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1.0);
+    transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+}
+
+
+
 
 
 /* Contact Section */
