--- a/styles.css
+++ b/styles.css
@@ -171,14 +171,15 @@ p {
 
 #containerProjects {
     display: flex;
+    margin-bottom: 400px;
 }
 
 #containerProjects img {
-   width: 400px;
-   height: 300px;
-   border: 1px solid #ddb8b8;
-   margin-bottom: 400px;
-   margin-right: 60px;
+    width: 400px;
+    height: 300px;
+    border: 1px solid #ddb8b8;
+    border-radius: 0.50rem;
+    margin-right: 60px;
 }
 
 .modal {
@@ -187,11 +188,12 @@ p {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     opacity: 0;
     visibility: hidden;
     transform: scale(1.1);
     transition: visibility 0s linar 0.25s, opacity 0.25s 0s, transform 0.25s;
+    border: 1px solid red;
 }
 
 .modalContent {
@@ -210,9 +212,15 @@ p {
     border: 1px solid #ddb8b8;
 }
 
-.modalContent img, .modalContent p {
+.modalContent img,
+.modalContent p {
     margin-left: 50px;
     margin-bottom: 50px;
+}
+
+.modalContent h2 {
+    margin-left: 50px;
+    margin-bottom: 20px;
 }
 
 .closeButton {
@@ -230,7 +238,7 @@ p {
 }
 
 .closeButton:hover {
-    background-color: #868e96; 
+    background-color: #868e96;
 }
 
 .showModal {
@@ -239,9 +247,6 @@ p {
     transform: scale(1.0);
     transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
 }
-
-
-
 
 
 /* Contact Section */
