--- a/styles.css
+++ b/styles.css
@@ -179,7 +179,6 @@ p {
     height: 300px;
     border: 1px solid #ddb8b8;
     border-radius: 0.50rem;
-    margin-right: 60px;
 }
 
 .modal {
@@ -234,12 +233,54 @@ p {
     color: #ffffff;
     text-align: center;
     font-weight: bold;
-
 }
 
 .closeButton:hover {
     background-color: #868e96;
 }
+
+.sub-container {
+    position: relative;
+    display: block;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+    cursor: pointer;
+    margin-right: 60px;
+
+}
+
+.clickable {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    background: #d6a9a9;
+    width: 100%;
+    height: 100%;
+    border-radius: 0.50rem;
+
+}
+
+.sub-container:hover .clickable {
+    opacity: 0.8;
+}
+
+
+.fas {
+    font-size: 5rem;
+    color: white;
+    position: relative;
+    left: 50%;
+    margin-left: -50px;
+    top: 50%;
+    margin-top: -50px;
+
+}
+
 
 .showModal {
     opacity: 1;
